# TEZ

./: .gitignore  CMakeLists.txt  DEVICE_CONFIGURATION.md  controller.yaml  package.xml  ros_workerCOM.py
config/: controller.yaml  joint_limits.yaml  ros2_controllers.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: display.launch.py  gazebo.launch.py  rviz_test.launch.py  sss  test_control.launch.py  webots.launch.py
log/: latest_build
meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
protos/: Tm5_900.proto
src/: tm5_900_hmi.py
src/.github/: copilot-instructions.md
src/tm5_900/: CMakeLists.txt  package.xml  panda_hmi.py
src/tm5_900/config/: default_kinematics.yaml  joint_limits.yaml  joint_names_tm5_900.yaml  physical_parameters.yaml  ros2_controllers.yaml  ros2_controllersWithGripper.yaml
src/tm5_900/launch/: bringup.launch.py  display.launch.py  panda_hmi.py  rviz_test.launch.py  webots.launch.py  webotss.launch.py
src/tm5_900/meshes/: base_link.STL  gripper_base_link.STL  lefthand_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  righthand_link.STL
src/tm5_900/scripts/: mimic_joint_node.py
src/tm5_900/tm5_hmi/: config.py  control.py  controlCom.py  dashboard.py  main.py  mainCom.py  ros_worker.py  rosworkerCom.py  topbar.py  viewer.py  widgets.py
src/tm5_900/tm5_hmi/programs/: pick_and_place.json  teach_programs.json
src/tm5_900/tm5_hmi_previous/: control.py  dashboard.py  main.py  ros_worker.py  tm5_gui.py  topbar.py  viewer.py  widgets.py
src/tm5_900/tm5_hmi_previous/programs/: teach_programs.json
src/tm5_900/urdf/: gripper.xacro  tm5_900.ros2_control.xacro  tm5_900.urdf  tm5_900.urdf.xacro  tm5_900_macro.xacro  tm5_withgripper.urdf
src/tm5_900/worlds/: .tm5_900_Env.wbproj  empty_world.wbt  industrial_world.wbt  tm5_900_Env.wbt
src/tm5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/tm5_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  tm5_900.ros2_control.xacro  tm5_900.srdf  tm5_900.urdf.xacro
src/tm5_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ur16/: CMakeLists.txt  package.xml
src/ur16/config/: controllers.yaml  joint_names_ur16.yaml
src/ur16/launch/: display.launch.py  gazebo.launch.py
src/ur16/meshes/: base_link.STL  l1.STL  l2.STL  l3.STL  l4.STL  l5.STL  l6.STL
src/ur16/urdf/: ur16.csv  ur16.urdf.xacro
src/ur16_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur16_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml  ur16.ros2_control.xacro  ur16.srdf  ur16.urdf.xacro  ur16_controllers.yaml
src/ur16_moveit_config/launch/: demo.launch.py  gazebo.launch.py  minimal_gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
urdf/: test_mock.urdf  tm5_900.csv  tm5_900.ros2_control.xacro  tm5_900.urdf  tm5_900.urdf.xacro  tm5_900_macro.xacro
worlds/: .empty_world.wbproj  empty_world.wbt
