<?xml version="1.0"?>
<package format="3">
  <name>tm5_900</name>
  <version>1.0.0</version>
  <description>URDF Description package for tm5_900. This package contains configuration data, 3D models and launch files for tm5_900 robot</description>
  <maintainer email="Halbadi22@posta.pau.edu.tr">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz2</build_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>