<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tm5_900</name>
  <version>1.0.0</version>
  <description>URDF Description package for tm5_900. Enhanced with Webots and ROS 2 Control.</description>
  <maintainer email="Halbadi22@posta.pau.edu.tr">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>

  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <depend>xacro</depend>

  <depend>webots_ros2_driver</depend>
  <depend>webots_ros2_control</depend>

  <exec_depend>gazebo_ros</exec_depend>
  
  <exec_depend>gazebo_ros2_control</exec_depend>

  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
  
</package>